fixtures/invalid/owned-path-overlap/src/shared/narrow/public.ts
export const narrowValue = 2;
